# pyside_listener

./: .gitignore  README.md  configs.json  hotwords.txt  main.py  paticipate_words.py  pyproject.toml  speech_recognition.py  utils.py
ui/: main.ui
